--- a/src/Monolegal.Infrastructure.DAL/Monolegal.Infrastructure.DAL.csproj
+++ b/src/Monolegal.Infrastructure.DAL/Monolegal.Infrastructure.DAL.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Monolegal.Domain\Monolegal.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
