--- a/src/Monolegal.Presentation/appsettings.json
+++ b/src/Monolegal.Presentation/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "MonolegalDatabaseSettings": {
+    "BooksCollectionName": "Books",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "BookstoreDb"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
