--- a/src/Monolegal.Application.Core/Monolegal.Application.Core.csproj
+++ b/src/Monolegal.Application.Core/Monolegal.Application.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Monolegal.Domain\Monolegal.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
