Registrar  y obtiene la informacion de las facturas y clientes(registros)

--- a/src/Monolegal.Presentation/appsettings.json
+++ b/src/Monolegal.Presentation/appsettings.json
@@ -2,7 +2,7 @@
   "MonolegalDatabaseSettings": {
     "BooksCollectionName": "Books",
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "BookstoreDb"
+    "DatabaseName": "MonolegalDb"
   },
 
   "Logging": {
