--- a/src/Monolegal.Presentation/Monolegal.Presentation.csproj
+++ b/src/Monolegal.Presentation/Monolegal.Presentation.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Monolegal.Application.Core\Monolegal.Application.Core.csproj" />
     <ProjectReference Include="..\Monolegal.Infrastructure.DAL\Monolegal.Infrastructure.DAL.csproj" />
     <ProjectReference Include="..\Monolegal.Infrastructure.IOC\Monolegal.Infrastructure.IOC.csproj" />
   </ItemGroup>
