--- a/src/Monolegal.Infrastructure.DAL/Monolegal.Infrastructure.DAL.csproj
+++ b/src/Monolegal.Infrastructure.DAL/Monolegal.Infrastructure.DAL.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
+    <PackageReference Include="RestSharp" Version="106.11.4" />
   </ItemGroup>
 
   <ItemGroup>
